2014-05-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Cast.h:
	* Route.cpp:
	* Parser.cpp:
	* Traverse.cpp:
	* Proto.h:
	* X3DBaseNode.h:
	* Proto.cpp:
	* X3DBaseNode.cpp:
	* X3DCoreContext.h:
	* X3DCoreContext.cpp:
	* X3DExecutionContext.h:
	* X3DExecutionContext.cpp:
	* X3DPrototypeInstance.h:
	* X3DPrototypeInstance.cpp: 

2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>

	* World.cpp: 

2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Scene.h:
	* World.h:
	* Proto.h:
	* Scene.cpp:
	* World.cpp:
	* Proto.cpp:
	* X3DBrowser.h:
	* X3DScene.h:
	* X3DScene.cpp:
	* X3DBrowser.cpp:
	* Notification.cpp:
	* ExternProto.cpp:
	* X3DProtoObject.h:
	* X3DBrowserContext.h:
	* X3DExecutionContext.h:
	* X3DCoreContext.cpp:
	* X3DExecutionContext.cpp:
	* jsBrowser.cpp:
	* X3DPrototypeInstance.h:
	* X3DPrototypeInstance.cpp: 

2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Scene.h:
	* Traverse.cpp:
	* X3DBaseNode.h:
	* X3DBaseNode.cpp:
	* ExternProto.h:
	* X3DNode.h:
	* X3DNode.cpp:
	* InlineTool.h:
	* Inline.h:
	* X3DExecutionContext.h:
	* X3DExecutionContext.cpp:
	* X3DPrototypeInstance.cpp: 

2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowser.cpp: 

2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Debug.h:
	* Text.h:
	* FontStyle.h:
	* FontStyle.cpp:
	* X3DFontStyleNode.h:
	* ScreenFontStyle.h:
	* X3DFontStyleNode.cpp:
	* ScreenFontStyle.cpp: 

2014-05-13  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* Router.h:
	* Router.cpp:
	* X3DBrowser.cpp:
	* ExternProto.cpp:
	* Inline.cpp:
	* X3DNetworkingContext.cpp: 

2014-05-12  Holger Seelig  <holger.seelig@yahoo.de>

	* Proto.h:
	* Traverse.cpp:
	* X3DBaseNode.cpp:
	* ExternProto.h: 

2014-05-12  Holger Seelig  <holger.seelig@yahoo.de>

	* Traverse.h:
	* Traverse.cpp: 

2014-05-12  Holger Seelig  <holger.seelig@yahoo.de>

	* Traverse.h:
	* Traverse.cpp: 

2014-05-12  Holger Seelig  <holger.seelig@yahoo.de>

	* Traverse.h:
	* Traverse.cpp: 
