@@ -54,6 +54,7 @@
 #include "../../Browser/X3DBrowser.h"
 #include "../../Execution/Scene.h"
 #include "../../Prototype/ExternProto.h"
+#include "../Core/WorldInfo.h"
 #include "../Networking/X3DUrlObject.h"
 
 #include <cassert>
@@ -149,6 +150,9 @@ X3DPrototypeInstance::initialize ()
 	}
 	catch (const X3DError &)
 	{ }
+	
+	if (getRootNodes () .empty () or not getRootNodes () .front ())
+		getRootNodes () .set1Value (0, new WorldInfo (this));
 
 	X3DNode::initialize ();
 	X3DExecutionContext::initialize ();
@@ -196,9 +200,6 @@ X3DBaseNode*
 X3DPrototypeInstance::getRootNode () const
 throw (Error <DISPOSED>)
 {
-	if (getRootNodes () .empty () or not getRootNodes () .front ())
-		throw Error <DISPOSED> ("Root node not available.");
-
 	return getRootNodes () .front ();
 }
 
@@ -260,12 +261,7 @@ X3DPrototypeInstance::restoreState ()
 void
 X3DPrototypeInstance::traverse (const TraverseType type)
 {
-	try
-	{
-		getRootNode () -> traverse (type);
-	}
-	catch (const X3DError &)
-	{ }
+	getRootNode () -> traverse (type);
 }
 
 void
@@ -279,7 +275,6 @@ void
 X3DPrototypeInstance::toXMLStream (std::ostream & ostream) const
 //throw (Error <DISPOSED>)
 {
-
 	ostream .imbue (std::locale::classic ());
 
 	if (Generator::IsSharedNode (this))
